# TradeBotManager

./: main.py  pyproject.toml
.github/: copilot-instructions.md
src/tradebotmanager/: env_variables.py  main.py  teste.py
src/tradebotmanager/bots/: __init__.py
src/tradebotmanager/bots_option_market/: model.py  repository.py
src/tradebotmanager/bots_usuarios_op_mkt/: model.py  repository.py
src/tradebotmanager/corretoras/: __init__.py  model.py  repository.py  service.py
src/tradebotmanager/corretoras_usuarios/: model.py  repository.py
src/tradebotmanager/database/: connection.py
src/tradebotmanager/integracao/: __init__.py
src/tradebotmanager/integracao/option_market/: __init__.py  client.py  repository.py
src/tradebotmanager/usuarios/: __init__.py  model.py  repository.py  service.py
